Fix spacing and responsiviness

--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,9 @@
   width: 50px;
 }
 
-.slidein {
-  animation-duration: 3s;
-  animation-name: slidein;
-}
+.fadein { animation: fadeIn 5s; }
 
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
